--- a/webapps/TMJRock/eg6.html
+++ b/webapps/TMJRock/eg6.html
@@ -4,43 +4,62 @@
 <head>
 <title>AJAX Examples</title>
 <script>
-//TMJRock code starts
-
-//TMJRock code ends
-//foll. is TMJRock user
-function DataModel()
-{
-this.data = null;
-this.getRowCount = function(){
-if(this.data==null) return 0;
-else return this.data.length;
-}
-//many more functions to help grid know how to make table
-}
-var myDataModel = new DataModel();
-
-function whatever()
-{
-//var employees = [{},{},{}];
-myDataModel.data = employees;
-
-//code to populate myDataModel with data (list of objects)
-}
-
 function doSomething()
 {
-$$$.grid({
-"model" = myDataModel,
-"pagination":true,
-"pageSize":10,
-"rowSelectionEnabled":true
-});
+//print innerHTML of all elements which has tm="yes" attribute value pair in it
+
+var allElements = document.querySelectorAll('*');
+var element;
+var value;
+var i=0;
+while(i<allElements.length)
+{
+element = allElements[i];
+value = element.getAttribute('tm');
+if(value=='yes')
+{
+console.log(element.innerHTML);
 }
-$$$.onDocumentLoaded(doSomething);
+i++;
+}
+
+}
+
+
 </script>
-</head>
+
 <body>
-<div id='someId'>
+God is great
+<div id='whatever1' tm='yes'>
+Hello Hello hello<br>
+Hello Hello hello<br>
+Hello Hello hello<br>
+Hello Hello hello<br>
+Hello Hello hello<br>
+
 </div>
+
+<span id='whatever2' tm='yes'>
+Whatever whatever whatever<br>
+Whatever whatever whatever<br>
+Whatever whatever whatever<br>
+Whatever whatever whatever<br>
+Whatever whatever whatever<br>
+</span>
+
+<div id='cool'>
+Cool cool cool<br>
+Cool cool cool<br>
+Cool cool cool<br>
+</div>
+
+<span id='something' tm='no'>
+Something something<br>
+</span>
+
+
+<button type='button' onClick='doSomething()'>
+Do something
+</button>
 </body>
 </html>
